style.css
body{
    background-image: url("images/pizza bkg.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
}
.tagline{
    font-family: 'Monoton', cursive;
    color: white;
    font-size: 150px;
    text-align: right;
    line-height: 150px;
    margin-right: 100px;
    margin-left: 20px;
    padding-top: 250px;
}

.tagline2{
    font-family: Vivaldi;
    color: #F54900;
    font-size: 60px;
    text-align: right;
    margin-right: 100px;
    margin-top: -30px;
    margin-bottom: 15px;
}

.tagline3{
    font-family: 'Montserrat', sans-serif;
    color: white;
    font-size: 22px;
    text-align: center;
    line-height: 50px;
    margin-bottom: 30px;
}



#banner2span{
    margin-left: 2px;
}


#logo-img {
    display: flex;
    height: 100%;
    background: transparent;
    padding-left: 6px;
    padding-top: 5px;
    padding-bottom: 5px;
    align-items: center;
    color: white;
    transition: 0.4s;
}

#logo-img img {
    height: 100px;
}

.vieworder{
    border: none;
    background: #F54900;
    color: white;
    border-radius: 50px;
    height: 50px;
    width: 150px;
    margin-top: 10px;
    margin-right: 5px;
}

.makeorder{
    border: none;
    background: #F54900;
    color: white;
    border-radius: 50px;
    height: 100px;
    width: 300px;
    text-align: right;
    margin-top: 10px;
    margin-right: 5px;
}

#banner2{
    height: 500px;
    width: 100%;
    background-color: white;
}
.tagline4{
    font-family: "Roboto Condensed", sans-serif;
    color: #F54900;
    text-align: center;
    padding-top: 30px;
    font-size: 50px;
}

.section-heading{
    color: white;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 20px;
}

.card{
    margin-bottom: 10px;
    margin-top: 10px;

}









html{
    scroll-behavior: smooth;
}



nav {
    height: 72px;
    background: black;
    width: 100%;
    margin: 0;
    position: fixed;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 20px;
    display: flex;
    justify-content: space-between;
    padding: 0 16px 0 0;
    box-sizing: border-box;
    z-index: 100;
}


#logo-img {
    display: flex;
    height: 100%;
    background: black;
    padding: 0 32px;
    align-items: center;
    color: white;
    transition: 0.4s;
}

#logo-img img {
    height: 100px;
}

#logo-img:hover {
    background: black;
}



#search-icon:hover {
    color: red;
}


section {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.section-heading {
    font-size: 32px;
    font-family: "Roboto Condensed", sans-serif;
    border-left: 3px solid black;
    border-right: 3px solid black;
    transition: all 0.4s;
    display: inline-block;
    padding: 4px 32px;
}

.section-heading:hover {
    padding: 4px 48px;
    background: white;
    color: #F54900;
}

/* Section Source */

#section-source p {
    padding: 8px;
    text-align: center;
}

#section-source a {
    margin: 8px;
    text-align: center;
}

/* Card */

.card-image {
    transition: 0.4s;
}

.card-image:hover {
    box-shadow: 0 10px 6px -6px #777;
}

.card .card-description {
    padding: 0 8px;
}

.card-meta-blogpost{
    color:#333;
    font-size:14px;
    padding: 16px;
    font-family:'Roboto Slab', serif;
}

.card-meta-blogpost a{
    color:#333;
}

/* Button Read more */

.btn-readmore {
    padding: 8px 24px;
    border: 3px solid black;
    transition: 0.4s;
    display: inline-block;
    margin-bottom: 24px;
    margin-left: 24px;
    font-weight: bold;
    cursor: pointer;
    background: white;
}

.btn-readmore:hover {
    background: black;
    text-decoration: none;
    padding: 8px 64px 8px 24px;
    color: white;
}


.btn-readmore2 {
    padding: 8px 24px;
    border: 3px solid red;
    transition: 0.4s;
    display: inline-block;
    margin-bottom: 24px;
    margin-left: 24px;
    font-weight: bold;
    cursor: pointer;
    background: white;
}

.btn-readmore2:hover {
    background: red;
    text-decoration: none;
    padding: 8px 64px 8px 24px;
    color: white;
}




/* Blog List page */

.page-heading{
    font-size:32px;
    font-family:'Roboto Condensed', sans-serif;
    border-left:3px solid black;
    border-right:3px solid black;
    transition: all 0.4s;
    display:inline-block;
    padding:4px 32px;
    margin-top: 120px;
}

.page-heading:hover{
    padding:4px 48px;
    background:red;
}

.card-meta{
    color:#333;
    font-size: 14px;
    padding-left:8px;
    font-family:'Roboto Slab', serif;
}

.card-meta a{
    color:#333;
}

/* Pagination */

.pagination{
    padding:8px;
    text-align:center;
    font-weight:bold;
}

.pagination a{
    border-top: 3px solid white;
    display: inline-block;
    padding:8px 16px;
    transition:0.4s;
}

.pagination a:hover{
    text-decoration: none;
    border-top:3px solid black;
}

/* Sidebar */



/* Media Queries */

@media (max-width: 900px) {
    nav ul {
        display: none;
    }

    #menu-icon {
        display: flex;
    }

    #slideout-menu {
        display: block;
    }

    #searchbox {
        display: none;
    }

    #blogpost{
        width:100%;
        border-left:0;
    }


}

/*small screens*/
@media (max-width: 719px) {
    main {
        width: 100%;
    }

    section {
        flex-direction: column;
    }

    .card,
    .card .card-image img {
        width: 100%;
    }
    .card{
        margin-bottom: 10px;
    }


}

@media (max-width: 600px) {
    main {
        width: 100%;
    }

    h1 {
        font-size: 48px;
    }

    #banner h3 {
        font-size: 20px;
    }

    .card {
        text-align: center;
    }

    #logo-img {
        padding: 0;
    }
}

/*tablet screens*/
@media (min-width: 720px) {
    main {
        width: 100%;
    }
    .card {
        width: 45%;
    }
    .card .card-image img {
        width: 100%;
    }
}

@media (min-width: 1200px) {
    main {
        width: 100%;
    }
}

